--- a/modulo2tarea2/ejercicio1.css
+++ b/modulo2tarea2/ejercicio1.css
@@ -11,6 +11,9 @@
     background: red;
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
 
@@ -18,6 +21,9 @@
     background: blue;   
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
 
@@ -25,5 +31,8 @@
     background:green;
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
