--- a/modulo2tarea2/ejercicio2.css
+++ b/modulo2tarea2/ejercicio2.css
@@ -12,6 +12,9 @@
     background: red;
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
 
@@ -19,6 +22,9 @@
     background: blue;   
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
 
@@ -26,5 +32,8 @@
     background:green;
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: solid 2px black;
 }
