--- a/modulo3tarea1/css/donacion.css
+++ b/modulo3tarea1/css/donacion.css
@@ -97,6 +97,7 @@ h2{
 }
 
 /*inicio home*/
+
 .homeimg {
     margin-bottom: 1.5em;
 }
@@ -119,6 +120,7 @@ h2{
 .bienvenidos {
     width: 75%;
     padding-right: 2em;
+    background-color: rgba(153, 6, 6, 0.555);
 }
 
 .size {
@@ -136,24 +138,26 @@ h2{
 }
 
 /* fin home*/
-
 /* Inicio Nosotros */
 
 .historia {
-    padding-top: 10px;
+    padding: 10px;
     box-sizing: border-box;
     font-size: 1.3em;
     padding-right: 2em;
+    background-color: rgba(153, 6, 6, 0.555);
 
 }
 
 .profesionales {
     display: flex;
+    padding: 10px;
     flex-direction: column;
     font-size: 1.3em;
-    margin-left: 2.25em;
+    padding-left: 2.25em;
     max-width: 960px;
     overflow: hidden;
+    background-color: rgba(153, 6, 6, 0.555);
 }
 
 .profesional {
@@ -205,12 +209,169 @@ h2{
 .parrafo_perfil {
     font-size: 1.1rem;
     padding: 5px;
+    text-align: justify;
 
 }
 
 /* fin nosotros */
+/* Inicio Info */
+
+.titulo1 {
+    background-color: #999;
+    text-decoration: underline;
+    font-size: 2em;
+    margin-left: 0;
+    width: auto;
+    max-width: 380px;
+    padding: 12px;
+    
+}
+
+.procedimiento, .recomendaciones, .info-importante {
+    padding: 2px 20px;
+    justify-content: left;
+    text-align: left;
+    color: black;
+    margin: 0;
+    border-bottom: 1px solid black;
+    background-color: rgba(153, 6, 6, 0.555);
+}
+
+.procedimiento {
+    background-color: rgba(153, 6, 6, 0.555);
+}
+
+.titulo2 {
+    text-decoration: underline;
+    font-size: 1.8em;
+}
+
+.subtitulo {
+    font-size: 1.5em;
+}
+
+.parrafo {
+    font-size: 1.3;
+    font-weight: 600;
+    text-align:justify
+}
+
+.parrafo-recomendacion {
+    color: black;
+}
+
+.parrafo-recomendacion:hover {
+    color: white;
+}
+
+.info-importante {
+    background-color: rgba(153, 6, 6, 0.555);
+    margin: 10px 0 5px 0;
+}
+
+.contenido-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.parrafo-info-imp {
+    font-size: 1.3;
+    font-weight: 600;
+    padding: 5px;
+    margin: 0px;
+    background-color: #999;
+    text-align: justify;
+}
+
+table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 5px;
+    border: 1px solid black;
+
+}
+
+.info-vacunas {
+    font-size: 1.3;
+    font-weight: 600;
+    padding: 5px;
+    margin: 0px;
+    background-color: #999;
+    text-align: justify;
+    border: 1px solid black
+    
+}
+
+.vacuna {
+    border-top: 1px solid black;
+    background-color: rgba(77, 73, 73, 0.534); 
+    font-size: 1.3em;
+    padding: 10px;
+}
+
+.requisitos {
+    width: 960px;
+    max-width: 100%;
+    display: flex;
+    margin-top: 10px;
+    object-fit: cover;
+}
 
 
+/* Fin Info */
+/* Inicio Contacto */
+
+.columna {
+    width: 50%;
+    box-sizing: border-box;
+    padding: 0.6em;
+}
+
+.columna.left {
+   border-right: 1px solid gray;
+}
+
+.columna.right p {
+    font-size: 1.1em;
+}
+
+.columna.right ul li {
+    font-size: 1em;
+}
+
+.formulario label {
+    vertical-align: top;
+    width: 20%;
+    display: inline-block;
+}
+
+.formulario input, .formulario textarea {
+    background-color: #ddd;
+    border-radius: 5px;
+    border: 1px solid #999;
+    padding: 0.4em 0.6em;
+    font-size: 0.8em;
+    width: 70%;
+}
+
+.formulario input [type="submit"] {
+    background-color: #6da9ed;
+    box-shadow: 0 0 70px rgba(0,0,0,0.4);
+    color: white;
+    font-size: 1em;
+    width: auto;
+    cursor: pointer;
+}
+
+.formulario textarea {
+    height: 10em;
+    resize: none;
+}
+
+.formulario .acciones {
+    text-align: center;
+}
+/* Fin Contacto */
 
 
 /* Media queries*/
@@ -236,4 +397,4 @@ h2{
     
 }
 
-/* Fin */
+/* Fin Media Queries*/
