--- a/Node/views/contacto.hbs
+++ b/Node/views/contacto.hbs
@@ -25,7 +25,7 @@
                         <label>Comentario</label>
                         <textarea name="mensaje"></textarea>
                     </p>
-                    <p className="centrar">
+                    <p class="centrar">
                         <input type="submit" value="Enviar" />
                     </p>
                 </form>
